--- a/package.json
+++ b/package.json
@@ -5,25 +5,30 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "core-js": "^3.39.0",
-    "css-loader": "^7.1.2",
     "live-server": "^1.2.2",
-    "postcss-loader": "^8.1.1",
-    "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "postcss-loader": "^8.1.1"
   },
   "name": "boilerplate",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --config webpack.dev.js",
     "dev-server": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "clean": "rm -rf node_modules",
+    "install": "npm install"
   },
   "author": "",
   "license": "ISC",
   "description": "babel src/index.js -o public/scripts/bundle.js --presets env --watch ",
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
